# autouav_platform

./: LICENSE  README.md  README_COMMAND.md  compile_control.sh
devel/: .catkin
devel/include/livox_ros_driver2/: LivoxCustomMsg.h  LivoxCustomPoint.h
devel/include/uavcontrol_msgs/: ArucoInfo.h  AuxCommand.h  BasicDataTypeAndValue.h  BoundingBox.h  BoundingBoxes.h  Bspline.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  CheckForObjectsActionResult.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h  Control.h  Corrections.h  CustomDataSegment.h  DetectionInfo.h  DetectionInfoSub.h  FormationAssign.h  GPSData.h  Gains.h  GeoFence.h  GimbalControl.h  GimbalState.h  GlobalAruco.h  LQRTrajectory.h  LedStates.h  LinktrackNode2.h  LinktrackNodeframe2.h  LivoxCustomMsg.h  LivoxCustomPoint.h  MultiArucoInfo.h  MultiBsplines.h  MultiDetectionInfo.h  MultiDetectionInfoSub.h  MultiUAVState.h  MultiUGVState.h  Odometry.h  OffsetPose.h  OutputData.h  (+25 more)
devel/lib/communication_bridge/: communication_bridge
devel/lib/fast_lio/: fliter_points
devel/lib/livox_ros_driver2/: livox_ros_driver2_node
devel/lib/pkgconfig/: communication_bridge.pc  fast_lio.pc  livox_ros_driver2.pc  uavcontrol.pc  uavcontrol_msgs.pc
devel/lib/python3/dist-packages/livox_ros_driver2/msg/: _LivoxCustomMsg.py  _LivoxCustomPoint.py  __init__.py
devel/lib/python3/dist-packages/uavcontrol_msgs/msg/: _ArucoInfo.py  _AuxCommand.py  _BasicDataTypeAndValue.py  _BoundingBox.py  _BoundingBoxes.py  _Bspline.py  _CheckForObjectsAction.py  _CheckForObjectsActionFeedback.py  _CheckForObjectsActionGoal.py  _CheckForObjectsActionResult.py  _CheckForObjectsFeedback.py  _CheckForObjectsGoal.py  _CheckForObjectsResult.py  _Control.py  _Corrections.py  _CustomDataSegment.py  _DetectionInfo.py  _DetectionInfoSub.py  _FormationAssign.py  _GPSData.py  _Gains.py  _GeoFence.py  _GimbalControl.py  _GimbalState.py  _GlobalAruco.py  _LQRTrajectory.py  _LedStates.py  _LinktrackNode2.py  _LinktrackNodeframe2.py  _LivoxCustomMsg.py  _LivoxCustomPoint.py  _MultiArucoInfo.py  _MultiBsplines.py  _MultiDetectionInfo.py  _MultiDetectionInfoSub.py  _MultiUAVState.py  _MultiUGVState.py  _Odometry.py  _OffsetPose.py  _OutputData.py  (+23 more)
devel/lib/python3/dist-packages/uavcontrol_msgs/srv/: __init__.py  (+1 more)
devel/lib/uavcontrol/: aruco_land  aruco_trigger_node  joy_node  led_mqtt_bridge  mission_planner  mission_waypoint_node  mqtt_bridge_node  rc_test  shout_mqtt_bridge  uav_command_pub  uav_control_main  uav_estimator_node  uavstate_mqtt_bridge
devel/share/communication_bridge/cmake/: communication_bridge-msg-paths.cmake  communication_bridgeConfig.cmake
devel/share/fast_lio/cmake/: fast_lio-msg-extras.cmake  fast_lio-msg-paths.cmake  fast_lioConfig.cmake
devel/share/livox_ros_driver2/cmake/: livox_ros_driver2-msg-paths.cmake  livox_ros_driver2Config.cmake
devel/share/roseus/ros/communication_bridge/: manifest.l
devel/share/roseus/ros/fast_lio/: manifest.l
devel/share/roseus/ros/livox_ros_driver2/: manifest.l
devel/share/roseus/ros/uavcontrol/: manifest.l
devel/share/roseus/ros/uavcontrol_msgs/: manifest.l
devel/share/uavcontrol/cmake/: uavcontrol-msg-extras.cmake  uavcontrol-msg-paths.cmake  uavcontrolConfig.cmake
devel/share/uavcontrol_msgs/cmake/: uavcontrol_msgs-msg-extras.cmake  uavcontrol_msgs-msg-paths.cmake  uavcontrol_msgsConfig.cmake
devel/share/uavcontrol_msgs/msg/: CheckForObjectsResult.msg
src/FAST_LIO/: CMakeLists.txt  package.xml
src/FAST_LIO/launch/: mapping_mid360.launch
src/FAST_LIO/rviz_cfg/: loam_livox.rviz
src/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/communication/: CMakeLists.txt  package.xml
src/communication/include/: custom_data_segment_msg.hpp  swarm_control_topic.hpp  uav_basic_topic.hpp  ugv_basic_topic.hpp
src/communication/launch/: bridge.launch  simulation_bridge.launch
src/communication/src/: swarm_control_topic.cpp  uav_basic_topic.cpp  ugv_basic_topic.cpp
src/livox_ros_driver2/: CMakeLists.txt  LICENSE.txt  README.en.md  README.md  build.sh
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch_ROS1/: msg_MID360.launch  rviz_MID360.launch
src/livox_ros_driver2/src/: lddc.cpp  lddc.h
src/livox_ros_driver2/src/include/: ros1_headers.h
src/uavcontrol/: CMakeLists.txt  package.xml
src/uavcontrol/config/: mqtt_command.json  uav_command_pub.yaml  uav_control.yaml  uav_control_mid360.yaml
src/uavcontrol/include/: aruco_land_command.h  aruco_land_nocontrol.h  controller_test.h  led_mqtt.hpp  mission_waypoint.h  rc_input.h  shout_mqtt.hpp  uav_controller.h  uav_estimator.h  usr_mqtt.hpp
src/uavcontrol/include/Position_Controller/: pos_controller_NE.h  pos_controller_PID.h  pos_controller_UDE.h
src/uavcontrol/launch/: aruco_land.launch  aruco_trigger_node.launch  joy_node.launch  mission_planning.launch  mission_waypoint.launch  mqtt_bridge.launch  px4.launch  start_sensor_bridges.launch  uav_command_pub.launch  uav_control.launch  uav_estimator.launch  uav_indor_control.launch  uavstate_mqtt_bridge.launch
src/uavcontrol/sh/: .mission_aruco_land.sh.swo  .mission_aruco_land.sh.swp  arm_and_command.sh  aruco_land.sh  fist_lio_slam.sh  mission_planning.sh  uav_basic_interface.sh  uav_indor_control.sh  uav_outdor_control.sh
src/uavcontrol/src/: uav_controller.cpp  uav_estimator.cpp  uav_estimator_node.cpp
src/uavcontrol/utils/: Led_mqtt_bridge.cpp  aruco_land.cpp  aruco_trigger_node.cpp  command_test.cpp  mission_planner.cpp  mission_waypoint.cpp  mqtt_bridge.cpp  sensorstate_mqtt_bridge.cpp  shout_mqtt_bridge.cpp  uav_command_pub.cpp  uavstate_mqtt_bridge.cpp
src/uavcontrol_msgs/: CMakeLists.txt  package.xml
src/uavcontrol_msgs/action/: CheckForObjects.action
src/uavcontrol_msgs/msg/: LedStates.msg  SO3Command.msg  ShoutStates.msg  TRPYCommand.msg  UAVCommand.msg  UAVState.msg
src/uavcontrol_msgs/srv/: arucoTrigger.srv
一键起飞返航高度测试/: test.sh
二维码降落/: README.md
基础接口/: README.md  uav_basic_interface.sh  uav_command_pub_aruco_land.sh
航线规划/: README.md
(+266 files in other folders)
