<?xml version="1.0"?>
<package format="2">
  <name>uavcontrol</name>
  <version>0.0.0</version>
  <description>The UAVcontrol package</description>

  <maintainer email="qiyh8@mail.sysu.edu.cn">Yuhua Qi</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>

  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

